[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Dragon1207 <smileboth0805@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.2"
requests = "2.28.1"
Werkzeug = "2.2.2"
pytest = "7.4.3"
poetry = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"